# byd50-ssi

./: .env.example  .gitignore  260107 📄📌 API 정의서 자동 산출 가이드 - Swagger(OpenAPI) + Redocly 기반.md  Makefile  README.md  Refactoring-PoC-MVP.md  configs.yml  go.mod  go.sum  repository-domain-roles-and-functions.md  run.sh  unit-test.txt  개발문서.md
android/: README.md  build.gradle  settings.gradle
android/app/src/main/cpp/: CMakeLists.txt  libfoo.h  native_bridge.cpp
api-docs/: api-docs.html
configs/: configs.yml
demo-client/: main.go
demo-issuer/: main.go
did-registry/: Dockerfile
did-sep/: Dockerfile  main.go
did_registrar/: Dockerfile
did_registry/: Dockerfile  main.go
did_service_endpoint/: main.go
docs/: 0-1.강의-요약본.md  0-2.교육-용어-시나리오-정리.md  1-1.FBS.md  1-1.PRD.md  1-2.PRD.md  1-3.아키텍처.md  2-1.개발문서.md  2-2.실습-체크리스트.md  2-3.코드-정리-지침.md  Directive: Code Polishing.md  Refactoring-PoC-MVP.md  onchain-registry-deploy-guide.md  repository-domain-roles-and-functions.md  개발문서.md  나.1).데모시퀀스 정의 및 설계.md  실습-체크리스트.md  요구명세서.md
geth_client/: main.go
greeter_client/: main.go
greeter_issuer/: main.go
greeter_server/: main.go
proto-files/: issuer.pb.go  issuer.proto  issuer_grpc.pb.go  registrar.pb.go  registrar.proto  registrar_grpc.pb.go  registry.pb.go  registry.proto  registry_grpc.pb.go  relyingparty.pb.go  relyingparty.proto  relyingparty_grpc.pb.go
scripts/: coverage-did.sh  dev-down.sh  dev-status.sh  dev-up.sh  html-to-pdf.js  integration-test.sh  swagger-docs.sh  swagger-lint.sh  swagger-pdf.sh  swagger.sh  test-summary.sh
test/: unit_test.go  (+1 more)
(+103 files in other folders)
